<resources>
    <string name="app_name">WYB_Android</string>
    <string name="app_version">버전 1.0.0</string>

    <!--URL-->
    <string name="wyb_instagram">https://www.instagram.com/washyourbottle</string>

    <!-- BindingFragment -->
    <string name="binding_error">Binding not initialized to reference the view.</string>

    <!-- General -->
    <string name="comfort">편리함</string>
    <string name="divider">|</string>
    <string name="complete">완료</string>
    <string name="next">다음</string>
    <string name="discomfort">불편함</string>
    <string name="date_format">%s.%s - %s</string>
    <string name="date_format_long">%s.%s - %s.%s</string>
    <string name="nickname">닉네임</string>

    <!-- Dialog -->
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="withdraw_title">계정을 정말 삭제하시겠습니까?</string>
    <string name="withdraw_title_sub">모든 정보가 완전히 삭제됩니다</string>

    <!-- WYBChallengeEditText -->
    <string name="challenge_et_hint">참을 수 있는 불편함을 적어주세요</string>

    <!-- OnBoarding -->
    <string name="onboarding_login_kakao">카카오 로그인</string>
    <string name="onboarding_login_google">Google 로그인</string>
    <string name="onboarding_main_title">Wash\nYour\nBottle</string>
    <string name="onboarding_main_title_sub">지금 할 수 있는 것부터\n시작하는 7일간의 제로웨이스트 챌린지</string>
    <string name="onboarding_main_btn">보틀 선물 받고 시작하기</string>
    <string name="onboarding_intro_title">누구나 포기하기\n어려운 편리함이 있습니다</string>
    <string name="onboarding_intro_title_sub_1">카페에서\n플라스틱 빨대를 포기하기 어렵다면</string>
    <string name="onboarding_intro_title_sub_2">대신 텀블러 사용부터\n도전해보는 건 어떨까요?</string>
    <string name="onboarding_intro_btn">네, 좋아요!</string>
    <string name="onboarding_comfort_title">보틀 선물 드려요</string>
    <string name="onboarding_comfort_title_sub_1">7일간 포기할 수 없는 <b>편리함</b>과</string>
    <string name="onboarding_comfort_title_sub_2">7일간 참아볼 수 있는 <b>불편함</b>을 적을 수 있어요</string>
    <string name="onboarding_comfort_example">플라스틱 빨대 사용하기</string>
    <string name="onboarding_discomfort_example">텀블러 사용하기</string>
    <string name="onboarding_challenge_title">물방울을 하나씩\n체크해 보세요</string>
    <string name="onboarding_challenge_title_sub">7일 동안 매일 불편함을 참으면 주스가 줄어들어요</string>
    <string name="onboarding_date_example">11.10 – 16</string>
    <string name="onboarding_challenge_mark">체크해 보세요</string>
    <string name="onboarding_wash_title">7일이 지나면</string>
    <string name="onboarding_wash_title_eng">Wash Your Bottle!</string>
    <string name="onboarding_wash_title_sub">보틀을 씻고 새로운 챌린지를 시작할 수 있어요</string>

    <!-- HomeFragment -->
    <string name="home_bottle_title">\'s Bottle</string>
    <string name="home_goto_bottle_world">다른 보틀보기</string>
    <string name="home_user_challenge_empty">새로운 챌린지를 기다리는 중…</string>
    <string name="home_show_calendar">달력보기</string>
    <string name="home_challenge_empty">현재 진행 중인 챌린지가 없어요\n보틀을 씻고 새 챌린지를 시작해보세요!</string>
    <string name="home_challenge_new">새로운 챌린지 참여하기</string>

    <!-- ChallengeOpenComfortFragment -->
    <string name="challenge_open_comfort_hint">플라스틱 빨대 사용 안 하기</string>
    <string name="challenge_open_comfort_nav_title">보틀 씻는 중</string>
    <string name="challenge_open_comfort_title">이번 일주일 동안\n포기하기 어려운 편리함은\n무엇인가요?</string>

    <!-- ChallengeOpenDiscomfortFragment -->
    <string name="challenge_open_discomfort_nav_title">거의 다 씻었어요!</string>
    <string name="challenge_open_discomfort_title">대신 일주일 동안\n7번 참아볼 수 있는\n불편함은 무엇인가요?</string>
    <string name="challenge_open_discomfort_hint">참을 수 있는 불편함을 적어주세요</string>
    <string name="challenge_open_discomfort_guide">챌린지 기간 동안 언제든 변경할 수 있어요!</string>

    <!-- ChallengeOpenStartDateFragment -->
    <string name="challenge_open_start_date_nav_title">보틀 씻기 완료!</string>
    <string name="challenge_open_start_date_title">오늘부터 시작할까요,\n내일부터 시작할까요?</string>
    <string name="challenge_open_start_date_btn_today">오늘부터</string>
    <string name="challenge_open_start_date_btn_tomorrow">내일부터</string>
    <string name="challenge_open_start_date_btn_start">챌린지 시작하기</string>

    <!-- CalendarFragment -->
    <string name="calendar_challenge_type_in_progress">진행 중인 챌린지</string>
    <string name="calendar_challenge_type_end">종료된 챌린지</string>
    <string name="calendar_my_challenge_new">새로운 챌린지 참여하기</string>
    <string name="calendar_other_challenge_new">새로운 챌린지를 기다리는 중</string>

    <!-- SettingFragment-->
    <string name="setting_inquiry">문의하기</string>
    <string name="setting_service_terms">이용약관</string>
    <string name="setting_privacy_policy">개인정보정책</string>
    <string name="setting_open_source">오픈소스</string>
    <string name="setting_profile">계정 설정</string>
    <string name="setting_profile_exposure">계정 공개 범위</string>
    <string name="setting_profile_management">계정 관리</string>
    <string name="setting_profile_exposure_title">내 계정 공개하기</string>
    <string name="setting_profile_exposure_sub_title">둘러보기에서 내 보틀을 다른 사용자에게 보여줍니다</string>
    <string name="setting_nickname_hint">닉네임을 입력해 주세요</string>
    <string name="nickname_alert_message">이미 사용 중이에요! 다른 닉네임을 적어주세요</string>
    <string name="nickname_max_length_message">6자까지만 입력할 수 있어요!</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_withdraw">탈퇴하기</string>

    <!--BottleWorldFragment-->
    <string name="bottle_world_title">보틀월드</string>
    <string name="bottle_world_all">둘러보기</string>
    <string name="bottle_world_follow">팔로우</string>
    <string name="bottle_world_follower">팔로워</string>
    <string name="bottle_world_following">팔로잉</string>
    <string name="bottle_world_search_hint">닉네임으로 검색</string>
    <string name="bottle_world_name">의 보틀</string>
    <string name="bottle_world_empty_search">검색 결과가 없습니다</string>
    <string name="bottle_world_empty_follower">아직 팔로워가 없습니다</string>
    <string name="bottle_world_empty_following">다른 보틀을 팔로우해 보세요!</string>

    <!-- NotificationFragment -->
    <string name="notification_title">알림</string>
    <string name="notification_policy_guide">알림은 7일 동안 보관됩니다</string>
    <string name="notification_btn_cheer">응원하기</string>
    <string name="notification_btn_celeb">축하하기</string>
    <string name="notification_none_title">오늘은 알림이 없습니다</string>
    <string name="notification_none_content">새로운 소식이 생기면 알려드릴게요!</string>
    <string name="notification_challenge_celeb">%s님이\n챌린지 성공을 축하해줬어요!</string>
    <string name="notification_challenge_cheer">%s님이\n내 챌린지를 응원해요!</string>
    <string name="notification_toast_celeb">%s님에게 챌린지 성공 축하를 보냈어요!</string>
    <string name="notification_toast_cheer">%s님에게 챌린지 응원을 보냈어요!</string>

    <!--NicknameFragment-->
    <string name="nickname_title">누구의\n보틀인가요?</string>
    <string name="nickname_hint">닉네임을 설정해 주세요</string>
</resources>