<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/onboarding_comfort_title"
                    android:textAppearance="@style/TextAppearance.WYBComponents.Bold.30"
                    android:textColor="@color/dark_gray_1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imgBottle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="76dp"
                    android:src="@drawable/img_bottle_oval"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvTitle"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:id="@+id/layoutComfortDiscomfort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="76dp"
                    android:alpha="0"
                    android:orientation="vertical"
                    android:paddingHorizontal="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgBottle"
                    tools:alpha="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/onboarding_comfort_title_sub_1"
                        android:textColor="@color/gray_3" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/onboarding_comfort_title_sub_2"
                        android:textColor="@color/gray_3" />

                    <com.wyb.wyb_android.widget.WYBLabelEditText
                        android:id="@+id/layoutComfortExample"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:focusableInTouchMode="false"
                        app:backgroundStroke="gray"
                        app:hint="@string/onboarding_comfort_example"
                        app:labelText="@string/comfort"
                        app:showIcon="false" />

                    <com.wyb.wyb_android.widget.WYBLabelEditText
                        android:id="@+id/layoutDiscomfortExample"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="60dp"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        app:backgroundStroke="gray"
                        app:hint="@string/onboarding_discomfort_example"
                        app:labelText="@string/discomfort"
                        app:showIcon="false" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <Button
            android:id="@+id/btnNext"
            style="@style/Widget.WYB.Button.SolidButton.FullWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>