<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.wyb.wyb_android.ui.open.ChallengeOpenViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.open.ChallengeOpenStartDateFragment">

        <include
            android:id="@+id/includeNavBar"
            layout="@layout/include_challenge_open_nav" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:text="@string/challenge_open_start_date_title"
            android:textAppearance="@style/TextAppearance.WYBComponents.Bold.30"
            android:textColor="@color/dark_gray_2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/shape_light_gray1_fill_light_gray2_stroke"
            android:orientation="vertical"
            android:paddingVertical="14dp"
            android:paddingStart="14dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comfort"
                android:textAppearance="@style/TextAppearance.WYBComponents.Medium.10"
                android:textColor="@color/gray_3" />

            <TextView
                android:id="@+id/tvComfort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.WYBComponents.Bold.14"
                android:textColor="@color/gray_3"
                tools:text="서브웨이에서 비닐봉투 받기" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/discomfort"
                android:textAppearance="@style/TextAppearance.WYBComponents.Medium.10"
                android:textColor="@color/gray_3" />

            <TextView
                android:id="@+id/tvDiscomfort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.WYBComponents.Bold.14"
                android:textColor="@color/gray_3"
                tools:text="플라스틱 빨대 사용 안 하기" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBoxToday"
                style="@style/Widget.WYB.CheckBox"
                android:checked="false"
                android:text="@string/challenge_open_start_date_btn_today" />

            <CheckBox
                android:id="@+id/checkBoxTomorrow"
                style="@style/Widget.WYB.CheckBox"
                android:layout_marginStart="8dp"
                android:checked="false"
                android:text="@string/challenge_open_start_date_btn_tomorrow" />

        </LinearLayout>

        <Button
            android:id="@+id/btnStart"
            style="@style/Widget.WYB.Button.SolidButton.FullWidth"
            android:enabled="false"
            android:text="@string/challenge_open_start_date_btn_start" />

    </LinearLayout>
</layout>