<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textAppearance="@style/TextAppearance.WYBComponents.Bold.16"
        android:textColor="@color/dark_gray_2"
        tools:text="@string/withdraw_title" />

    <TextView
        android:id="@+id/tvTitleSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:textAppearance="@style/TextAppearance.WYBComponents.Medium.13"
        android:textColor="@color/gray_4"
        tools:text="@string/withdraw_title_sub" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/light_gray_2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/confirm"
            android:textAppearance="@style/TextAppearance.WYBComponents.Bold.14"
            android:textColor="@color/gray_2" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/orange"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.WYBComponents.Bold.14"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>