<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            app:layout_constraintBottom_toTopOf="@id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/onboarding_intro_title"
                android:textAppearance="@style/TextAppearance.WYBComponents.Bold.30"
                android:textColor="@color/orange" />

            <TextView
                android:id="@+id/tvSub1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:alpha="0"
                android:text="@string/onboarding_intro_title_sub_1"
                android:textAppearance="@style/TextAppearance.WYBComponents.Medium.16"
                android:textColor="@color/gray_4"
                tools:alpha="1" />

            <TextView
                android:id="@+id/tvSub2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="24dp"
                android:alpha="0"
                android:text="@string/onboarding_intro_title_sub_2"
                android:textAppearance="@style/TextAppearance.WYBComponents.Medium.16"
                android:textColor="@color/gray_4"
                tools:alpha="1" />
        </LinearLayout>

        <Button
            android:id="@+id/btnNext"
            style="@style/Widget.WYB.Button.SolidButton.FullWidth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_intro_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>